--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Learned how to extract and present actionable insights that deliver business value from common data sources like Excel, CSV files, and SQL databases.. Check out my <a href="#work">work</a>.</p>
+								<p>As a data analytics student, I learned how to extract and present actionable insights that deliver business value from common data sources like Excel, CSV files, and SQL databases.. Check out my <a href="#work">work</a>.</p>
 							
 							</article>
 
